fix spacing at top of post date

--- a/_includes/css/blog.css
+++ b/_includes/css/blog.css
@@ -10,6 +10,7 @@
 
 /* +post */
 .Post-date {
+  display: block;
   margin: 1.5rem 0 0;
 }
 
